src/main/java/com/example/chuchu/common/errors/exception/DuplicateResourceException.java
package com.example.chuchu.common.errors.exception;

public class DuplicateResourceException extends RuntimeException {

    public DuplicateResourceException(String message) {
        super(message);
    }

    public DuplicateResourceException(String message, Throwable cause) {
        super(message, cause);
    }

}
